// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A goal page is closed 1`] = `
Object {
  "5b502211e500e3001afd1e20": Object {
    "2": Object {
      "loading": false,
      "navigationStateV2": Object {
        "focusRef": undefined,
        "focusType": undefined,
        "index": 0,
        "routes": Array [
          Object {
            "key": "centralTab",
            "title": "CentralTab",
          },
          Object {
            "key": "focusTab",
            "title": "FocusTab",
          },
        ],
      },
      "refreshing": false,
      "updating": false,
    },
    "goal": Object {
      "__v": 0,
      "_id": "5b502211e500e3001afd1e20",
      "category": "General",
      "created": "2018-07-19T05:30:57.531Z",
      "details": Object {
        "tags": Array [],
        "text": "This is detail",
      },
      "feedInfo": Object {
        "_id": "5b502211e500e3001afd1e18",
        "publishDate": "2018-07-19T05:30:57.531Z",
      },
      "lastUpdated": "2018-07-19T05:30:57.531Z",
      "needs": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "introduction to someone from the Bill and Melinda Gates Foundation",
          "isCompleted": false,
          "order": 0,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Get in contact with Nuclear experts",
          "isCompleted": false,
          "order": 1,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Legal & Safety experts who have worked with the United States",
          "isCompleted": false,
          "order": 2,
        },
      ],
      "owner": Object {
        "_id": "5b17781ebec96d001a409960",
        "name": "jia zeng",
        "profile": Object {
          "elevatorPitch": "This is my elevatorPitch",
          "occupation": "Software Engineer",
          "pointsEarned": 10,
          "views": 0,
        },
      },
      "priority": 3,
      "privacy": "friends",
      "steps": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "This is my first step to complete the goal",
          "isCompleted": false,
          "order": 0,
        },
      ],
      "title": "Establish a LMFBR near Westport, Connecticut by 2020",
    },
    "reference": Array [
      2,
    ],
  },
  "goal": Object {},
  "reference": Array [],
}
`;

exports[`Same goal is opened twice 1`] = `
Object {
  "5b502211e500e3001afd1e20": Object {
    "1": Object {
      "loading": false,
      "navigationStateV2": Object {
        "focusRef": undefined,
        "focusType": undefined,
        "index": 0,
        "routes": Array [
          Object {
            "key": "centralTab",
            "title": "CentralTab",
          },
          Object {
            "key": "focusTab",
            "title": "FocusTab",
          },
        ],
      },
      "refreshing": false,
      "updating": false,
    },
    "goal": Object {
      "__v": 0,
      "_id": "5b502211e500e3001afd1e20",
      "category": "General",
      "created": "2018-07-19T05:30:57.531Z",
      "details": Object {
        "tags": Array [],
        "text": "This is detail",
      },
      "feedInfo": Object {
        "_id": "5b502211e500e3001afd1e18",
        "publishDate": "2018-07-19T05:30:57.531Z",
      },
      "lastUpdated": "2018-07-19T05:30:57.531Z",
      "needs": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "introduction to someone from the Bill and Melinda Gates Foundation",
          "isCompleted": false,
          "order": 0,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Get in contact with Nuclear experts",
          "isCompleted": false,
          "order": 1,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Legal & Safety experts who have worked with the United States",
          "isCompleted": false,
          "order": 2,
        },
      ],
      "owner": Object {
        "_id": "5b17781ebec96d001a409960",
        "name": "jia zeng",
        "profile": Object {
          "elevatorPitch": "This is my elevatorPitch",
          "occupation": "Software Engineer",
          "pointsEarned": 10,
          "views": 0,
        },
      },
      "priority": 3,
      "privacy": "friends",
      "steps": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "This is my first step to complete the goal",
          "isCompleted": false,
          "order": 0,
        },
      ],
      "title": "Establish a LMFBR near Westport, Connecticut by 2020",
    },
    "reference": Array [
      1,
    ],
  },
  "goal": Object {},
  "reference": Array [],
}
`;

exports[`Same goal is opened twice 2`] = `
Object {
  "5b502211e500e3001afd1e20": Object {
    "1": Object {
      "loading": false,
      "navigationStateV2": Object {
        "focusRef": undefined,
        "focusType": undefined,
        "index": 0,
        "routes": Array [
          Object {
            "key": "centralTab",
            "title": "CentralTab",
          },
          Object {
            "key": "focusTab",
            "title": "FocusTab",
          },
        ],
      },
      "refreshing": false,
      "updating": false,
    },
    "2": Object {
      "loading": false,
      "navigationStateV2": Object {
        "focusRef": undefined,
        "focusType": undefined,
        "index": 0,
        "routes": Array [
          Object {
            "key": "centralTab",
            "title": "CentralTab",
          },
          Object {
            "key": "focusTab",
            "title": "FocusTab",
          },
        ],
      },
      "refreshing": false,
      "updating": false,
    },
    "goal": Object {
      "__v": 0,
      "_id": "5b502211e500e3001afd1e20",
      "category": "General",
      "created": "2018-07-19T05:30:57.531Z",
      "details": Object {
        "tags": Array [],
        "text": "This is detail",
      },
      "feedInfo": Object {
        "_id": "5b502211e500e3001afd1e18",
        "publishDate": "2018-07-19T05:30:57.531Z",
      },
      "lastUpdated": "2018-07-19T05:30:57.531Z",
      "needs": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "introduction to someone from the Bill and Melinda Gates Foundation",
          "isCompleted": false,
          "order": 0,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Get in contact with Nuclear experts",
          "isCompleted": false,
          "order": 1,
        },
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "Legal & Safety experts who have worked with the United States",
          "isCompleted": false,
          "order": 2,
        },
      ],
      "owner": Object {
        "_id": "5b17781ebec96d001a409960",
        "name": "jia zeng",
        "profile": Object {
          "elevatorPitch": "This is my elevatorPitch",
          "occupation": "Software Engineer",
          "pointsEarned": 10,
          "views": 0,
        },
      },
      "priority": 3,
      "privacy": "friends",
      "steps": Array [
        Object {
          "created": "2018-07-19T05:30:57.531Z",
          "description": "This is my first step to complete the goal",
          "isCompleted": false,
          "order": 0,
        },
      ],
      "title": "Establish a LMFBR near Westport, Connecticut by 2020",
    },
    "reference": Array [
      2,
      1,
    ],
  },
  "goal": Object {},
  "reference": Array [],
}
`;
